
distributables.xsl
----------------------
* Added info for the ejbjar and ear tasks. Patch by Joris Kuipers

ModificationSet
----------------------
* Fixed bogus "A modification was detected in the future" message
* Now properly checks time of modficiations that are added as elements

VssBootstrapper
----------------------
* Fixed a bug where bootstrapper would hang if SS.exe put up a prompt.

CruiseControl Release Notes - 2.1.5

ArtifactsPublisher
----------------------
* Add attribute 'subdirectory'. Patch by Garrick Olson
* Change copying of individual files to no longer use the path to the file before copying as part of the path after copying. Patch by Garrick Olson

BuildLogger
----------------------
* New interface to handle the Log subelements from the CruiseControl config. Implementers have the opportunity to manipulate the CruiseControl build log just before it gets written to disk.

BuildStatus
----------------------
* New SourceControl implementation. Used to trigger a build when another CruiseControl project has a successfuil build. Works by monitoring the log directory for the "target" project. - Patch by Garrick Olson

build.xml (jsp)
----------------------
* will build war w/out jars in WEB-INF/lib if property jdk1.4 is defined.
* removed files from war that shouldn't be included. Patch by Matt Albrecht

ClearCaseBootstrapper
----------------------
* Added ClearCaseBootstrapper to plug-in registry under the name "clearcasebootstrapper". - Patch by Esa Laine

ClearCase Sourcecontrol
----------------------
* Fixed bug with ClearCase version 2002.05.00 that hindered sending email. Patch by Ian Colledge and Esa Laine
* Fixed bug where comments with ~ or # were causing modifications to be lost

CruiseControlController
----------------------
* don't try and deserialize directories that have the same name as the project. Fix by Paul Spencer

CruiseControlTagSupport
----------------------