@@ -18,6 +18,12 @@ ModificationSet
 * Fixed bogus "A modification was detected in the future" message
 * Now properly checks time of modficiations that are added as elements
 
+PVCS
+----------------------
+* Added loginId attribute. Patch by David Cole
+* Added back up date format to try in case output date includes seconds. Patch by David Cole
+* Added additional parsing when project files includes project path. Patch by David Cole
+
 VssBootstrapper
 ----------------------
 * Fixed a bug where bootstrapper would hang if SS.exe put up a prompt.
